Fixed followerImg spacing

--- a/source/style.css
+++ b/source/style.css
@@ -153,6 +153,9 @@ body {
 .avatar{
     max-width: 100%;
     max-height: 100%;
+    display: block;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .followerInfoBox{
